--- a/Part_2.ipynb
+++ b/Part_2.ipynb
@@ -694,9 +694,154 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = np.arange(6)\n",
+        "b = np.arange(10,15,3)\n",
+        "c = np.concatenate((b,a))\n",
+        "#print(c)\n",
+        "\n",
+        "d = np.sort(c)\n",
+        "#print(d)\n",
+        "\n",
+        "e = d[:4]\n",
+        "#print(e)\n",
+        "\n",
+        "f = d[4:]\n",
+        "#print(f)\n",
+        "\n",
+        "\n",
+        "g = e.reshape((2,2))\n",
+        "h = f.reshape((2,2))\n",
+        "\n",
+        "#print(g)\n",
+        "#print(h)\n",
+        "\n",
+        "i = np.concatenate((g,h),axis=0)\n",
+        "np.sort(i,axis=0)"
+      ],
       "metadata": {
-        "id": "KiVCmpRvIWAK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KiVCmpRvIWAK",
+        "outputId": "83145cfe-5195-4eea-aac2-7b496f5b5f44"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1],\n",
+              "       [ 2,  3],\n",
+              "       [ 4,  5],\n",
+              "       [10, 13]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 155
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exercises\n",
+        "\n",
+        "1. Looking at the official Numpy documentation, write a function `my_linear_solver` for computing the solution of linear systems $Ax=b$ as $x=A^{-1}b$.\n",
+        "2. Confront the solution with `np.linalg.solve()`. Which method is faster?\n"
+      ],
+      "metadata": {
+        "id": "vbAsI--ANHCv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_linear_solver(A,b):\n",
+        "  # your code here\n",
+        "  Am1 = np.linalg.inv(A)\n",
+        "  x = np.matmul(Am1,b)\n",
+        "  return x"
+      ],
+      "metadata": {
+        "id": "1xkLkWK7QnKU"
+      },
+      "execution_count": 156,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.random.randint(-10,10,(1000,1000))\n",
+        "b = np.random.randint(-10,10,(1000,1))\n",
+        "\n",
+        "start_time = time.time()\n",
+        "my_solution = my_linear_solver(A,b)\n",
+        "mytime = time.time() - start_time\n",
+        "print(mytime)\n",
+        "\n",
+        "start_time = time.time()\n",
+        "linalg_solution = np.linalg.solve(A,b)\n",
+        "linalgtime = time.time() - start_time\n",
+        "print(linalgtime)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ijB1vujQRC_D",
+        "outputId": "e6f49bff-dae5-4ec0-c9c5-a50b997dfb2f"
+      },
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.20962977409362793\n",
+            "0.06490015983581543\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\\begin{cases}\n",
+        "x+y+z=3\\\\\n",
+        "x^2 + y^2 + z^2 = 5\\\\\n",
+        "e^x + xy+xz = 1\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "\n",
+        "solution $[0,2,1]$"
+      ],
+      "metadata": {
+        "id": "d0x0KoC1Se8h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Newton_system(F, J, x0, tol):\n",
+        "    F_value = F(x0)\n",
+        "    F_norm = np.linalg.norm(F_value, ord=2)  # l2 norm of vector\n",
+        "    iteration_counter = 0\n",
+        "    while abs(F_norm) > tol and iteration_counter < 100:\n",
+        "        delta = np.linalg.solve(J(x), -F_value)\n",
+        "        x = x + delta\n",
+        "        F_value = F(x)\n",
+        "        F_norm = np.linalg.norm(F_value, ord=2)\n",
+        "        iteration_counter += 1\n",
+        "\n",
+        "    # Here, either a solution is found, or too many iterations\n",
+        "    if abs(F_norm) > tol:\n",
+        "        iteration_counter = -1\n",
+        "    return x, iteration_counter"
+      ],
+      "metadata": {
+        "id": "NR41Z-6SSu97"
       },
       "execution_count": null,
       "outputs": []
